--- a/btvn_buoi1/index.html
+++ b/btvn_buoi1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,51 +7,53 @@
     </head>
     <body>
         <h1>How 60 Minutes a Day Can Change Your Life</h1>
-        <p>The simple commitment most people avoid that can dramatically transform you</p>
+        <p>Simple commitment most people avoid that can dramatically transform you</p>
+        <figure>
             <img src="https://miro.medium.com/v2/resize:fit:4800/format:webp/1*mQMV9oRJY-6lLMpqUJKehw.jpeg" width="100%" alt="How 60 Minutes a Day Can Change Your Life"> 
-            <blockquote>Photo by <a href="https://vi.wikipedia.org/w/index.php?title=%C4%90%E1%BB%8Dc_V%E1%BB%8B_Ng%C6%B0%E1%BB%9Di_L%E1%BA%A1&action=edit&redlink=1">Markus Spiske</a>/Pexels</blockquote>
-        <p><b>One Hour. 60 Minutes. 3,600 Seconds.</b> We all have the same 24 hours in a day, but somehow, the idea of carving out just <b>one hour</b> to learn something new feels monumental for most people.</p>
+            <figcaption>Photo by <a href="https://vi.wikipedia.org/w/index.php?title=%C4%90%E1%BB%8Dc_V%E1%BB%8B_Ng%C6%B0%E1%BB%9Di_L%E1%BA%A1&action=edit&redlink=1" target="_blank">Markus Spiske</a>/Pexels</figcaption>
+        </figure>
+        <p><strong>One Hour. 60 Minutes. 3,600 Seconds.</strong> We all have the same 24 hours in a day, but somehow, the idea of carving out just <strong>one hour</strong> to learn something new feels monumental for most people.</p>
         <p>It's strange when you think about it — one hour is the time it takes to watch a TV episode, scroll endlessly through social media, or mindlessly wander the internet. Yet, when it comes to dedicating this small sliver of the day to a productive purpose, many people just can't seem to do it.</p>
         <p>My question is: <i>why?</i></p>
-        <p>The answer is nothing insidious, yet profound when you think about it:<b>because one hour feels “optional”</b>. It's not part of the non-negotiables of our day like eating, sleeping, or working. It feels like time we <i>should </i>spend doing something, but we rarely do. Yet, if you harness that single hour every day, the impact can be radical. One hour is enough to learn a new skill, develop a passion, or build a foundation for something life-changing.</p>
+        <p>The answer is nothing insidious, yet profound when you think about it:<strong>because one hour feels “optional”</strong>. It's not part of the non-negotiables of our day like eating, sleeping, or working. It feels like time we <i>should </i>spend doing something, but we rarely do. Yet, if you harness that single hour every day, the impact can be radical. One hour is enough to learn a new skill, develop a passion, or build a foundation for something life-changing.</p>
         <p>How do I know this? Because I've done it myself.</p>
         <h2>The Simple Math of Transformation</h2>
         <p>One hour per day may seem small, but over time, it compounds into something significant:</p>
             <ul>
-                <li><b>7 hours a week</b> — that's nearly a full workday of learning something new.</li>
-                <li><b>30 hours a month</b> — that's the equivalent of completing an entire module in a university class.</li>
-                <li><b>365 hours in a year </b>— over 15 full days spent purely on growth.</li>
+                <li><strong>7 hours a week</strong> — that's nearly a full workday of learning something new.</li>
+                <li><strong>30 hours a month</strong> — that's the equivalent of completing an entire module in a university class.</li>
+                <li><strong>365 hours in a year </strong>— over 15 full days spent purely on growth.</li>
             </ul>
-        <p>But let's think bigger. They say it takes <b>10,000 hours</b> to master a skill, a concept popularized by <a href="https://vi.wikipedia.org/w/index.php?title=%C4%90%E1%BB%8Dc_V%E1%BB%8B_Ng%C6%B0%E1%BB%9Di_L%E1%BA%A1&action=edit&redlink=1">Malcolm Gladwell's</a> <i>Outliers.</i> While mastery might be the long game, dedicating an hour a day means you'd accumulate over 350 hours in one year toward any skill. That's enough to make significant progress — not just dabble, but truly level up.</p>
+        <p>But let's think bigger. They say it takes <strong>10,000 hours</strong> to master a skill, a concept popularized by <a href="https://vi.wikipedia.org/w/index.php?title=%C4%90%E1%BB%8Dc_V%E1%BB%8B_Ng%C6%B0%E1%BB%9Di_L%E1%BA%A1&action=edit&redlink=1">Malcolm Gladwell's</a> <i>Outliers.</i> While mastery might be the long game, dedicating an hour a day means you'd accumulate over 350 hours in one year toward any skill. That's enough to make significant progress — not just dabble, but truly level up.</p>
         <p>And the beauty? Learning compounds. What starts as a slow process turns into real momentum, which is exactly what happened to me when I decided to teach myself how to code.</p>
         <h2>How I Taught Myself to Code in 3 Months</h2>
         <p>Three months ago, I had zero knowledge about coding. Zilch. I didn't know a “variable” from a “function,” and the thought of looking at endless lines of code on a screen felt like staring into the Matrix.</p>
         <p>But I was curious. Coding is everywhere these days, from apps to websites to automation tools. I realized it wasn't just something “tech people” could do — it was a skill anyone could pick up. So, I gave myself a simple goal: <b>one hour a day, every day, for three months.</b></p>
         <p>At first, it was awkward and slow. I spent the first few weeks reading through beginner-friendly guides and watching tutorials. Terms like <i>loops, arrays,</i> and <i>syntax errors</i> swam around in my head, and progress felt minimal. But here's the thing about learning: the beginning is always the hardest. If you can push through that initial discomfort, you'll surprise yourself.</p>
         <p>By month two, things started clicking. I began writing small programs, testing out logic, and understanding how everything connected. The one hour I committed to each day stopped feeling like a chore — it became exciting. By month three, I had built my first simple app to check in and check out visitors and be able to track rooms accessed. Sure, there are plenty of visitor management software in the market, but that feeling of achievement was priceless.</p>
-        <p>The process taught me something profound: <b>you don't need talent. You don't need experience. All you need is time, consistency, and patience.</b></p>
+        <p>The process taught me something profound: <strong>you don't need talent. You don't need experience. All you need is time, consistency, and patience.</strong></p>
         <p>One hour a day — 3,600 seconds — completely changed the way I saw myself. I went from “I'm not a coding person” to “What else can I learn if I commit just one hour daily?”</p>
         <h2>Why Don't More People Do This?</h2>
         <p>So, if it's this simple, why doesn't everyone invest one hour a day in learning something new? There are a few reasons:</p>
         <ol>
-            <li><b>People Underestimate Small Steps: </b>most of us are obsessed with instant results. If we can't see massive change immediately, we assume it isn't working. But small steps lead to big changes over time — just not overnight.</li>
-            <li><b>The Comfort of the Familiar:</b> spending an hour learning something new feels <i>uncomfortable</i>. It's easier to default to Netflix, scrolling, or anything else that doesn't challenge us. Growth requires effort, and effort feels inconvenient.</li>
-            <li><b>We're Afraid of Failing:</b>starting something new means not being good at it. We fear looking foolish, making mistakes, or “wasting time.” But the truth is, every master was once a beginner. No one wakes up knowing how to play the piano or speak Spanish fluently — they committed to showing up and improving a little each day.</li>
-            <li><b>It Feels Like We Don't Have Time:</b> this is the most <b>common</b> excuse. But let's be honest — if you have time for social media, binge-watching, or scrolling memes, you <i>do </i> have time. You just have to choose how to spend it.</li>
+            <li><strong>People Underestimate Small Steps: </strong>most of us are obsessed with instant results. If we can't see massive change immediately, we assume it isn't working. But small steps lead to big changes over time — just not overnight.</li>
+            <li><strong>The Comfort of the Familiar:</strong> spending an hour learning something new feels <i>uncomfortable</i>. It's easier to default to Netflix, scrolling, or anything else that doesn't challenge us. Growth requires effort, and effort feels inconvenient.</li>
+            <li><strong>We're Afraid of Failing:</strong>starting something new means not being good at it. We fear looking foolish, making mistakes, or “wasting time.” But the truth is, every master was once a beginner. No one wakes up knowing how to play the piano or speak Spanish fluently — they committed to showing up and improving a little each day.</li>
+            <li><strong>It Feels Like We Don't Have Time:</strong> this is the most <strong>common</strong> excuse. But let's be honest — if you have time for social media, binge-watching, or scrolling memes, you <i>do </i> have time. You just have to choose how to spend it.</li>
         </ol>
         <h2>Imagine Your Life After a Year of Learning</h2>
         <p>Here's where things get exciting.</p>
         <p>Let's say you decide today that you're going to spend one hour a day learning something — anything. Picture yourself one year from now:</p>
         <ul>
-            <li>If you spent that hour on <b>fitness</b>, you'd be stronger, healthier, look way better, and more confident..</li>
-            <li>If you learned <b>a new language</b>, you'd be able to hold conversations fluently.</li>
-            <li>If you picked up <b>an instrument</b> , you'd be playing your favorite songs.</li>
-            <li>If you practiced <b>meditation</b>, you'd feel calmer, more focused, and resilient</li>
+            <li>If you spent that hour on <strong>fitness</strong>, you'd be stronger, healthier, look way better, and more confident..</li>
+            <li>If you learned <strong>a new language</strong>, you'd be able to hold conversations fluently.</li>
+            <li>If you picked up <strong>an instrument</strong> , you'd be playing your favorite songs.</li>
+            <li>If you practiced <strong>meditation</strong>, you'd feel calmer, more focused, and resilient</li>
         </ul>
         <p>One hour a day can lead to a version of yourself you didn't think was possible. All it takes is a choice: to show up, invest the time, and trust the process.</p>
         <h2>The Best ROI You'll Ever Get</h2>
-        <p><b>Time is our most valuable resource</b>, and how you use it matters. Spending one hour a day learning something new is one of the best investments you can make in yourself. The return on investment is immeasurable — you'll gain skills, confidence, and the belief that you're capable of so much more than you realize.</p>
-        <p>Sure, it's easy to say, “I don't have time” or “it's too late to start.” But remember this: <b>the next 3,600 seconds will pass whether you use them or not.</b> The only difference is what you choose to do with them.</p>
+        <p><strong>Time is our most valuable resource</strong>, and how you use it matters. Spending one hour a day learning something new is one of the best investments you can make in yourself. The return on investment is immeasurable — you'll gain skills, confidence, and the belief that you're capable of so much more than you realize.</p>
+        <p>Sure, it's easy to say, “I don't have time” or “it's too late to start.” But remember this: <strong>the next 3,600 seconds will pass whether you use them or not.</strong> The only difference is what you choose to do with them.</p>
         <p>Imagine looking back a year from now and realizing you didn't take action. Or imagine looking back and seeing how far you've come — all because you decided to commit one small hour a day to yourself.</p>
         <p>Start small. Pick a skill, any skill. Find a book, a course, a video, or a mentor. Then spend an hour a day practicing, learning, and improving. It's not about perfection — it's about showing up and making progress.</p>
         <p>Trust me — those 3,600 seconds a day can change your life.</p>
